# There are no targets in this Makefile. It is just here so these files
# will show up in the distribution. See the comment at the top of eachc
# file for directions on how to build it.
#
# b-compiled.scm  - compiled bigloo example (uses b-example.scm)
# b-example.scm   - interpreted bigloo example (uses driver in rnumber/bigloo/tests)
# perl-example.pl - perl example
# c-example1.c    - c example
# example1.C      - C++ example.
#

EXTRA_DIST = b-compiled.scm b-example.scm perl-example.pl c-example1.c example1.C



