
AUTOMAKE_OPTIONS = serial-tests

TESTS = float-test.pl \
	jims_test.pl \
	mem-test.pl \
	number_tests.pl \
	simple_mem_test.pl \
	simple_test.pl \
	rnumber-example.pl \
	check-rnumber-example.pl 


EXTRA_DIST = $(webdata_DATA) rnumber-example.output

CLEANFILES = output

webdata_DATA = $(TESTS)

webdatadir = $(WEB_HOME)/examples

